# cosmic_ray_detection

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT  LICENSE-MIT.txt  README.md
.github/workflows/: rust.yml
src/: config.rs  detector.rs  main.rs
