[package]
name = "cosmic_ray_detection"
version = "5.0.2"
edition = "2021"
authors = ["Johanna Sörngård (jsorngard@gmail.com)"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1.0"
chrono = "0.4"
rayon = { version = "1.10", optional = true }
sysinfo = { version = "0.30", default_features = false }

[profile.release-lto]
inherits = "release"
lto = "fat"

[profile.dev.package."*"]
# Enable optimization of dependencies also in debug mode
opt-level=3

[features]
# Enable this feature to run all memory reads and writes in parallel.
rayon = ["dep:rayon", "clap/cargo"]
